--- a/BH/BH.vcxproj.filters
+++ b/BH/BH.vcxproj.filters
@@ -46,6 +46,7 @@
     <ClCompile Include="Modules\StashExport\StashExport.cpp" />
     <ClCompile Include="TableReader.cpp" />
     <ClCompile Include="Task.cpp" />
+    <ClCompile Include="HeroBreakpoints.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AsyncDrawBuffer.h" />
@@ -107,5 +108,6 @@
     <ClInclude Include="Modules\StashExport\StashExport.h" />
     <ClInclude Include="TableReader.h" />
     <ClInclude Include="Task.h" />
+    <ClInclude Include="HeroBreakpoints.h" />
   </ItemGroup>
 </Project>
