--- a/BH/BH.vcxproj.filters
+++ b/BH/BH.vcxproj.filters
@@ -27,7 +27,6 @@
     <ClCompile Include="Drawing\UI\UI.cpp" />
     <ClCompile Include="Drawing\UI\UITab.cpp" />
     <ClCompile Include="JSONObject.cpp" />
-    <ClCompile Include="Modules\AutoTele\AutoTele.cpp" />
     <ClCompile Include="Modules\Bnet\Bnet.cpp" />
     <ClCompile Include="Modules\ChatColor\ChatColor.cpp" />
     <ClCompile Include="Modules\Gamefilter\Gamefilter.cpp" />
@@ -47,6 +46,8 @@
     <ClCompile Include="TableReader.cpp" />
     <ClCompile Include="Task.cpp" />
     <ClCompile Include="HeroBreakpoints.cpp" />
+    <ClCompile Include="Modules\AutoTele\AutoTele.cpp" />
+    <ClCompile Include="SessionStatistics.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AsyncDrawBuffer.h" />
@@ -84,12 +85,9 @@
     <ClInclude Include="Modules.h" />
     <ClInclude Include="Modules\AutoTele\ATIncludes\ArrayEx.h" />
     <ClInclude Include="Modules\AutoTele\ATIncludes\CMapIncludes.h" />
-    <ClInclude Include="Modules\AutoTele\ATIncludes\CollisionMap.h" />
     <ClInclude Include="Modules\AutoTele\ATIncludes\Matrix.h" />
     <ClInclude Include="Modules\AutoTele\ATIncludes\SyncObj.h" />
-    <ClInclude Include="Modules\AutoTele\ATIncludes\TeleportPath.h" />
     <ClInclude Include="Modules\AutoTele\ATIncludes\Vectors.h" />
-    <ClInclude Include="Modules\AutoTele\AutoTele.h" />
     <ClInclude Include="Modules\Bnet\Bnet.h" />
     <ClInclude Include="Modules\ChatColor\ChatColor.h" />
     <ClInclude Include="Modules\Gamefilter\Gamefilter.h" />
@@ -109,5 +107,10 @@
     <ClInclude Include="TableReader.h" />
     <ClInclude Include="Task.h" />
     <ClInclude Include="HeroBreakpoints.h" />
+    <ClInclude Include="Modules\AutoTele\ATIncludes\CollisionMap.h" />
+    <ClInclude Include="Modules\AutoTele\ATIncludes\TeleportPath.h" />
+    <ClInclude Include="Modules\AutoTele\AutoTele.h" />
+    <ClInclude Include="SessionStatistics.h" />
+    <ClInclude Include="json.hpp" />
   </ItemGroup>
 </Project>
